mini-elp/crates/elp/src/resources/test/parse_error/eqwalize_parse_error_a.pretty
error: incompatible_types
   ┌─ parse_error_a/src/parse_error_a.erl:20:5
   │
20 │     X.
   │     ^ X.
Expression has type:   [number()]
Context expected type: atom()


1 ERROR
